<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF7F2"
    android:padding="16dp"
    tools:context=".mvp.view.GameScreen">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <TextView
        android:id="@+id/txt_title"
        style="@style/StyleGameTextTitle"
        android:text="@string/text_2048"
        app:layout_constraintBottom_toTopOf="@id/line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_score"
        style="@style/StyleGameTextScoreGame"
        app:layout_constraintBottom_toTopOf="@id/btnRestart"
        app:layout_constraintEnd_toStartOf="@id/txt_best_score"
        app:layout_constraintStart_toEndOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/line1"
        tools:text="Score\n1650" />

    <TextView
        android:id="@+id/txt_best_score"
        style="@style/StyleGameTextScoreGame"
        app:layout_constraintBottom_toTopOf="@id/btn_undo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_score"
        app:layout_constraintTop_toBottomOf="@id/line1"
        tools:text="Best score\n56.5k" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRestart"
        style="@style/StyleButtonActionGame"
        android:text="@string/text_restart"
        app:layout_constraintBottom_toTopOf="@id/line2"
        app:layout_constraintEnd_toStartOf="@id/btn_undo"
        app:layout_constraintStart_toEndOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/txt_score" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_undo"
        style="@style/StyleButtonActionGame"
        android:text="@string/text_undo"
        app:layout_constraintBottom_toTopOf="@id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnRestart"
        app:layout_constraintTop_toBottomOf="@id/txt_best_score" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/cells_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_rectangle"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />

            <TextView
                style="@style/StyleCell"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogRestart"
        style="@style/StyleDialogContainer"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <TextView
            android:id="@+id/restart_title"
            style="@style/StyleDialogTitle"
            android:text="@string/text_dialog_restart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/restart_yes"
            style="@style/StyleDialogButton"
            android:text="@string/text_yes"
            app:layout_constraintEnd_toStartOf="@id/restart_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restart_title" />

        <TextView
            android:id="@+id/restart_no"
            style="@style/StyleDialogButton"
            android:text="@string/text_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/restart_yes"
            app:layout_constraintTop_toBottomOf="@id/restart_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogWin"
        style="@style/StyleDialogContainer"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <TextView
            android:id="@+id/win_title"
            style="@style/StyleDialogTitle"
            android:text="@string/text_dialog_win"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/win_restart"
            style="@style/StyleDialogButton"
            android:text="@string/text_restart"
            app:layout_constraintEnd_toStartOf="@id/win_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/win_title" />

        <TextView
            android:id="@+id/win_home"
            style="@style/StyleDialogButton"
            android:text="@string/text_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/win_restart"
            app:layout_constraintTop_toBottomOf="@id/win_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/dialogGameOver"
        android:background="#40FFFFFF"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_width="0dp"
        android:fontFamily="@font/clear_sans_bold"
        android:layout_height="0dp"
        android:text="@string/text_dialog_game_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

</androidx.constraintlayout.widget.ConstraintLayout>
